# fit-biodem-func

./: .env-template  .env.example  .gitignore  COPYING  COPYING.txt  README.md  bdm-func-lib.py  bdm_lib.py  bdm_plot.py  fit_lib.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: publish-to-test-pypi.yml
fit_biodem_func/: aws.py  bdm_lib.py  bdm_plot.py  config.py  fit_lib.py  fit_lib.py.orig  user_data.py  utils.py  views.py
fit_biodem_func/app/: __init__.py  models.py
fit_biodem_func/static/css/: style.css
fit_biodem_func/templates/: index.html
tests/: test_fit_biodem_func.py
