[tool.poetry]
name = "fit-biodem-func"
version = "0.1.0"
description = ""
authors = ["Luigi Ponti <quartese@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
lmfit = "^1.0.2"
boto3 = "^1.17.46"
Flask = "^1.1.2"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.17.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
